Too much work in one commit :+1:

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Chemo Bull Shit</h1>
-    <button id="checkPage">Say Hello</button>
-  </body>
+    <div class="menu" >
+    <input type="checkbox" id="closeTab" name="closeTab"/>
+    <label for="closeTab"><nobr>Close Bad Tabs Automatically</nobr></label></div>  </body>
 </html>
